2015-10-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70732: Move configuration files to Configuration directory
	* Resolves #62206: Array problem 5.4+

2015-10-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70669: Convert localization files to xliff and move them to Resources directory
	* Resolves #70671: Require TYPO3 CMS 6.2 and remove references to previous versions

2014-07-02 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #60022: Dependency issues when updating to 3.1.3

2014-06-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #59919: id tag not unique / no class tag for multiple select box

2014-06-25 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Adjust extension constraints
	* Remove useless error message from syslog regarding non-matching authCode
	* Update version to 3.1.3

2014-05-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #58964: Additional Fields not working after update on 6.2
	* Follow-up to Resolves #58964: Additional Fields not working after update on 6.2
	* Resolves #58997: Labels for field "house_no" are missing in locallang.xml
	* Resolves #52037: Erroneous mailto link in text version of acceptance email to admin after confirmation

2014-05-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Second argument of tx_srfeuserregister_auth::deleteRecord should be an array
	* Fix some default language labels
	* Missing value for BACK_URL marker
	* Missing fieldset element on login form in default template

2014-04-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Correction to default template for sr_freecap

2014-04-10 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* First argument of tx_srfeuserregister_auth->aCAuth should be an array

2014-04-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57650: Fatal error: Call to a member function getSubmit() on a non-object

2014-04-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Correction to manual regarding removed generatePassword option
